# Offline-level-save

./: CMakeLists.txt  README.md  about.md  build.bat  build.sh  build.yml  mod.json
SRC/: OfflineBadge.cpp  OfflineBrowserLayer.cpp  OfflineImportExport.cpp  OfflineManager.cpp  OfflineManager.hpp  OfflineSearch.cpp  OfflineStats.cpp  RecordsManager.cpp  RecordsManager.hpp  main.cpp
