cmake_minimum_required(VERSION 3.21)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project(OfflineLevelSaver VERSION 3.0.0)
add_library(${PROJECT_NAME} SHARED
    src/main.cpp
    src/OfflineManager.cpp
    src/OfflineStats.cpp
    src/OfflineImportExport.cpp
    src/OfflineSearch.cpp
    src/OfflineBadge.cpp
    src/RecordsManager.cpp
)
if (NOT DEFINED ENV{GEODE_SDK})
    message(FATAL_ERROR "Unable to find Geode SDK!")
endif()
add_subdirectory($ENV{GEODE_SDK} ${CMAKE_CURRENT_BINARY_DIR}/geode)
setup_geode_mod(${PROJECT_NAME})
